--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../src/assets/css/style.css">
-    <title>Coccolilli Memory</title>
+    <title>Lele and Bea's Memory</title>
   </head>
   <body>
     <div id="app"></div>
